## pythonFlu - Python wrapping for OpenFOAM C++ API
## Copyright (C) 2010- Alexey Petrov
## Copyright (C) 2009-2010 Pebble Bed Modular Reactor (Pty) Limited (PBMR)
## 
## This program is free software: you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation, either version 3 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
## 
## You should have received a copy of the GNU General Public License
## along with this program.  If not, see <http://www.gnu.org/licenses/>.
## 
## See http://sourceforge.net/projects/pythonflu
##
## Author : Alexey PETROV
##


#--------------------------------------------------------------------------------------
# Process this file with autoconf to produce a configure script
#--------------------------------------------------------------------------------------
AC_INIT([pythonFlu Project], [8.0], [alexey.petrov.nnov@gmail.com], [pythonflu])

# AC_CONFIG_AUX_DIR defines an alternative directory where to find the auxiliary
# scripts such as config.guess, install-sh, ...
AC_CONFIG_AUX_DIR(admin)
AC_CONFIG_MACRO_DIR([admin])
AM_INIT_AUTOMAKE([tar-pax -Wno-portability])


echo "--------------------------------------------------------------------------------------"
CONFFOAM_CHECK_OS
echo 

echo "--------------------------------------------------------------------------------------"
CONFFOAM_CHECK_BUILD_VERSION1
echo 

echo "--------------------------------------------------------------------------------------"
CONFFOAM_CHECK_PGP_KEY_ID
echo 

echo "--------------------------------------------------------------------------------------"
CONFFOAM_CHECK_OPENFOAM
echo 

echo "--------------------------------------------------------------------------------------"
CONFFOAM_CHECK_SWIG
echo 

echo "--------------------------------------------------------------------------------------"
CONFFOAM_CHECK_PYTHON
echo 

echo "--------------------------------------------------------------------------------------"
CONFFOAM_CHECK_FOAM2VTK
echo 

echo "--------------------------------------------------------------------------------------"
CONFFOAM_CHECK_UNV2FOAM
echo 

echo "--------------------------------------------------------------------------------------"
CONFFOAM_CHECK_DIFFUSIONFOAMLIB
echo 

echo "--------------------------------------------------------------------------------------"
CONFFOAM_CHECK_BOOST_SHARED_PTR
echo 


echo "--------------------------------------------------------------------------------------"
PYFOAM_CHECK_SINGLELIB
echo 


echo "--------------------------------------------------------------------------------------"
PYFOAM_CHECK_EMBEDDEDCXX
echo 


echo "---------------------------- mandatory products --------------------------------"
CONFFOAM_PRINT_SUMMURY( "openfoam_ok swig_ok python_ok" )
echo
echo "---------------------------- optional products ---------------------------------"
CONFFOAM_PRINT_SUMMURY( "diffusionfoamlib_ok foam2vtk_ok unv2foam_ok boost_shared_ptr_ok" )
echo
echo "--------------------------------- features -------------------------------------"
CONFFOAM_PRINT_SUMMURY( "singlelib embeddedcxx" )
echo
echo "--------------------------------------------------------------------------------"
CONFFOAM_CHECK_MANDATORY( "openfoam_ok swig_ok python_ok" )


#--------------------------------------------------------------------------------------
AC_OUTPUT( [ bashrc \
	     Makefile \
	     include.makefile \
	     include.base.makefile \
	     include.foam.makefile \
	     foam.version.makefile \
	     Foam/__init__.py \
	     Foam/Makefile \
	     Foam/OpenFOAM/Makefile \
	     Foam/meshTools/Makefile \
	     Foam/finiteVolume/Makefile \
	     Foam/fv/Makefile \
	     Foam/fvc/Makefile \
	     Foam/fvm/Makefile \
	     Foam/MULES/Makefile \
	     Foam/sampling/Makefile \
	     Foam/dynamicMesh/Makefile \
	     Foam/dynamicFvMesh/Makefile \
	     Foam/thermophysicalModels/Makefile \
	     Foam/transportModels/Makefile \
	     Foam/radiation/Makefile \
	     Foam/incompressible/Makefile \
	     Foam/compressible/Makefile \
	     Foam/applications/utilities/postProcessing/graphics/Makefile \
	     Foam/applications/utilities/mesh/conversion/Makefile \
	     make-deb.sh \
	     make-rpm.sh \
	     deb-template/control \
	     rpm-template/rpm.spec \
	     ChangeLog ],
	     [ chmod 755 make-deb.sh make-rpm.sh ] )


echo "------------------------------------ OK -----------------------------------------"

