## pythonFlu - Python wrapping for OpenFOAM C++ API
## Copyright (C) 2010- Alexey Petrov
## Copyright (C) 2009-2010 Pebble Bed Modular Reactor (Pty) Limited (PBMR)
## 
## This program is free software: you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation, either version 3 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
## 
## You should have received a copy of the GNU General Public License
## along with this program.  If not, see <http://www.gnu.org/licenses/>.
## 
## See http://sourceforge.net/projects/pythonflu
##
## Author : Alexey PETROV
##


#--------------------------------------------------------------------------------------
# Process this file with autoconf to produce a configure script
#--------------------------------------------------------------------------------------
AC_INIT([pythonFlu Project], [8.2-hybrid], [alexey.petrov.nnov@gmail.com], [pythonflu])

# AC_CONFIG_AUX_DIR defines an alternative directory where to find the auxiliary
# scripts such as config.guess, install-sh, ...
AC_CONFIG_AUX_DIR(admin)
AC_CONFIG_MACRO_DIR([admin])
AM_INIT_AUTOMAKE([tar-pax -Wno-portability])


echo "--------------------------------------------------------------------------------------"
CONFFLU_CHECK_OS
echo 

echo "--------------------------------------------------------------------------------------"
CONFFLU_CHECK_PROJECT_VERSION1
echo 

echo "--------------------------------------------------------------------------------------"
CONFFLU_CHECK_PGP_KEY_ID
echo 

echo "--------------------------------------------------------------------------------------"
CONFFLU_CHECK_OPENFOAM
echo 

echo "--------------------------------------------------------------------------------------"
CONFFLU_CHECK_SWIG
echo 

echo "--------------------------------------------------------------------------------------"
CONFFLU_CHECK_PYTHON
echo 

echo "--------------------------------------------------------------------------------------"
CONFFLU_CHECK_DIFFUSIONFOAMLIB
echo 

echo "--------------------------------------------------------------------------------------"
CONFFLU_CHECK_BOOST_SHARED_PTR
echo

echo "--------------------------------------------------------------------------------------"
PYTHONFLU_CHECK_CREATING_PACKAGE
echo


echo "---------------------------- mandatory products --------------------------------"
CONFFLU_PRINT_SUMMURY( "openfoam_ok swig_ok python_ok" )
echo
echo "---------------------------- optional products ---------------------------------"
CONFFLU_PRINT_SUMMURY( "diffusionfoamlib_ok foam2vtk_ok unv2foam_ok boost_shared_ptr_ok" )
echo
echo "--------------------------------- features -------------------------------------"
CONFFLU_PRINT_SUMMURY( "singlelib embeddedcxx" )
echo
echo "--------------------------------------------------------------------------------"
CONFFLU_CHECK_MANDATORY( "openfoam_ok swig_ok python_ok" )


#--------------------------------------------------------------------------------------
AC_OUTPUT( [ bashrc \
	     Makefile \
	     Foam/include.base.makefile \
	     Foam/include.foam.makefile \
	     Foam/foam.version.makefile \
	     Foam/include.src.makefile \
	     Foam/__init__.py \
	     Foam/Makefile \
	     Foam/OpenFOAM/Makefile \
	     Foam/meshTools/Makefile \
	     Foam/finiteVolume/Makefile \
	     Foam/fv/Makefile \
	     Foam/fvc/Makefile \
	     Foam/fvm/Makefile \
	     Foam/MULES/Makefile \
	     Foam/sampling/Makefile \
	     Foam/dynamicMesh/Makefile \
	     Foam/dynamicFvMesh/Makefile \
	     Foam/randomProcesses/Makefile \
	     Foam/thermophysicalModels/Makefile \
	     Foam/transportModels/Makefile \
	     Foam/radiation/Makefile \
	     Foam/incompressible/Makefile \
	     Foam/compressible/Makefile \
	     Foam/src/common.hxx \
	     Foam/src/common.hh \
	     make-deb.sh \
	     make-rpm.sh \
	     deb-template/control \
	     deb-template/Makefile \
	     deb-template/postinst \
	     deb-template/prerm \
	     deb-template/postrm \
	     deb-template/preinst \
	     rpm-template/rpm.spec \
	     rpm-template/Makefile \
	     ChangeLog ],
	     [ chmod 755 make-deb.sh make-rpm.sh ] )


echo "------------------------------------ OK -----------------------------------------"

